--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Poppins:wght@400;500;600;700;800&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="ngo.css">
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body class="ngo-theme">
@@ -20,6 +21,7 @@
             <nav aria-label="Primary">
                 <ul>
                     <li><a href="dashboard.html" class="active">Dashboard</a></li>
+                    <li><a href="stray-reports.html">Stray Reports</a></li>
                     <li><a href="rescue-cases.html">Rescue Cases</a></li>
                     <li><a href="volunteers.html">Volunteers</a></li>
                     <li><a href="medical-records.html">Medical Records</a></li>
