--- a/collaboration.html
+++ b/collaboration.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Poppins:wght@400;500;600;700;800&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ngo.css">
     <link rel="stylesheet" href="collaboration.css">
   </head>
-  <body>
+  <body class="ngo-theme">
     <header>
       <div class="container">
         <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation" />
