--- a/medical-records.html
+++ b/medical-records.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Poppins:wght@400;500;600;700;800&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ngo.css">
     <link rel="stylesheet" href="medical-records.css">
   </head>
-  <body>
+  <body class="ngo-theme">
     <header>
       <div class="container">
         <a href="index.html" aria-label="StrayCare Home">
