--- a/rescue-cases.html
+++ b/rescue-cases.html
@@ -9,10 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Poppins:wght@400;500;600;700;800&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ngo.css">
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="rescue-cases.css">
 </head>
-<body>
+<body class="ngo-theme">
     <header>
         <div class="container">
             <a href="index.html" aria-label="StrayCare Home">
