--- a/index.html
+++ b/index.html
@@ -231,6 +231,10 @@
             © <span id="year">2025</span> StrayCare
             • <a href="contact.html">Contact</a>
             • <a href="donate.html">Donate</a>
+            • <a href="privacy.html">Privacy Policy</a>
+            • <a href="terms.html">Terms &amp; Conditions</a>
+            • <a href="refunds.html">Cancellation &amp; Refunds</a>
+            • <a href="shipping.html">Shipping Policy</a>
           </p>
           <div class="social-links" aria-label="Social media">
             <a href="#" aria-label="Follow on Twitter">🐦</a>
