--- a/login.html
+++ b/login.html
@@ -18,12 +18,12 @@
         </a>
         <nav aria-label="Primary">
           <ul>
-            <li><a href="about.html">About</a></li>
+            <!-- <li><a href="about.html">About</a></li>
             <li><a href="adopt.html">Adopt</a></li>
             <li><a href="donate.html">Donate</a></li>
             <li><a href="volunteer.html">Volunteer</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="login.html" aria-current="page">Login</a></li>
+            <li><a href="login.html" aria-current="page">Login</a></li> -->
             <li><a href="register.html">Register</a></li>
           </ul>
         </nav>
