--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
           try {
             console.log('Submitting form data:', formData);
             
-            const response = await fetch('/api/contact', {
+            const response = await fetch('https://straycare-api.onrender.com/api/contact', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
